# retro-rl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TASKS.md  conftest.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: default.yaml  env-airstriker.yaml  env.yaml  env_v10.yaml  env_v11.yaml  env_v12.yaml  env_v9.yaml  ppo.yaml  ppo_smoke.yaml  ppo_v10.yaml  ppo_v10_smoke.yaml  ppo_v11.yaml  ppo_v11_smoke.yaml  ppo_v12.yaml  ppo_v12_smoke.yaml  ppo_v9.yaml  ppo_v9_smoke.yaml  ppo_v9_smoke_lr.yaml  ppo_v9_smoke_vecnorm.yaml
docs/: architecture.md  end_to_end_procedure.md  environment.md  training.md  v9_procedure_pipeline.md
frontend/: app.py
frontend/components/: api_client.py  plots.py
frontend/pages/: 1_Training.py  2_Play.py  3_Compare.py
outputs/eval/ppo_airstriker_smoke/: metrics.json
scripts/: diagnose_bullet_ram.py  diagnose_bullet_ram_focused.py  diagnose_bullet_slot_lifetime.py  diagnose_bullet_slot_respawn.py  diagnose_bullet_visual.py  diagnose_eval_trace.py  diagnose_fire_button.py  diagnose_fire_rate_vs_state.py  diagnose_video_kill_frames.py  diagnose_wrapper_fire_trace.py  eval_period_sweep.py  evaluate.py  install_stable_retro_macos.sh  play.py  play_random.py  serve.py  train.py
src/contra_rl/agents/: __init__.py
src/contra_rl/backend/: __init__.py
src/contra_rl/evaluation/: __init__.py
src/contra_rl/models/: __init__.py
src/contra_rl/utils/: __init__.py  logging.py
src/retro_rl/: __init__.py
src/retro_rl/agents/: __init__.py  base.py  ppo.py  random_agent.py  recurrent_ppo.py
src/retro_rl/backend/: __init__.py  api.py  inference.py  models.py
src/retro_rl/env/: __init__.py  retro_env.py  reward_shaping.py  wrappers.py
src/retro_rl/evaluation/: __init__.py  evaluator.py  metrics.py
src/retro_rl/models/: __init__.py  attention.py  cnn.py  impala.py  policies.py
src/retro_rl/training/: __init__.py  callbacks.py  checkpoint.py  trainer.py
src/retro_rl/utils/: __init__.py  config.py  logging.py  seeding.py  video.py
tests/: test_agents.py  test_backend.py  test_env.py  test_evaluation.py  test_models.py  test_training.py
