[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-rl"
version = "0.0.1"
description = "Reinforcement learning agent for stable-retro games (default: Airstriker-Genesis-v0)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "truongbnguyen88" }]
license = { text = "MIT" }
dependencies = [
    # Core RL
    "stable-baselines3>=2.3.0",
    "stable-retro>=0.9.2",
    "gymnasium>=0.29.1",
    "shimmy>=1.3",
    "torch>=2.2.0",

    # Numerical / image
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4.9",

    # Config / logging
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "tensorboard>=2.16",
    "rich>=13.7",

    # Backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Frontend (kept light; can be installed separately)
    "streamlit>=1.33",
    "plotly>=5.20",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff==0.15.13",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",                  # FastAPI TestClient dependency
]
wandb = ["wandb>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Diagnostic scripts: one-off investigations preserved for reference (v5→v7
# fire-rate bug hunt, RAM/sprite probes). Not part of the production codepath;
# relax rules around try/except teardown and write-only debug variables.
"scripts/diagnose_*.py" = ["SIM105", "SIM108", "F841", "E402", "B007"]
"scripts/eval_period_sweep.py" = ["SIM105"]
"scripts/play_random.py" = ["SIM105"]
# Entry-point scripts use sys.path shims before importing retro_rl, so
# E402 (imports below the shim) is expected and intentional.
"scripts/evaluate.py" = ["E402"]
"scripts/serve.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests",
]
